--- a/w1/d4/views/home.ejs
+++ b/w1/d4/views/home.ejs
@@ -15,11 +15,25 @@
   <h2>
     <%= subtitle %>
   </h2>
+  <h3>Character names</h3>
   <ul>
     <% users.forEach(user=> {%>
       <%- include('user', {user}) %>
         <%})%>
   </ul>
+  <h3>Character Id's</h3>
+  <h3>Character Age</h3>
+
+  <form method="POST" action="/characters">
+    <label for="name">Name:</label>
+    <input type="text" name="name">
+    <label for="name">Age:</label>
+    <input type="number" name="age">
+    <input type="submit">
+
+  </form>
+
+
 </body>
 
 </html>
