ADDING code to file system and ejs view

--- a/w1/d4/views/userData.ejs
+++ b/w1/d4/views/userData.ejs
@@ -24,11 +24,13 @@
   <h3>Character Id's</h3>
   <h3>Character Age</h3>
 
-  <form method="POST" action="/characters">
+  <form method="POST" action="">
     <label for="name">Name:</label>
     <input type="text" name="name">
-    <label for="name">Age:</label>
-    <input type="number" name="age">
+    <label for="country">Country:</label>
+    <input type="text" name="country">
+    <label for="category">Category:</label>
+    <input type="text" name="category">
     <input type="submit">
 
   </form>
