ADDED code for hashing the password

--- a/w1/d5/views/register.ejs
+++ b/w1/d5/views/register.ejs
@@ -10,6 +10,12 @@
 
 <body>
   <h1>It works! Yes</h1>
+  <form method="post" action="/auth/register">
+    <input type="text" name="name" placeholder="Enter your Name" />
+    <input type="text" name="username" placeholder="Enter your Username" />
+    <input type="password" name="password" placeholder="Enter your Password" />
+    <input type="submit" />
+  </form>
 </body>
 
 </html>
